--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <header>The Odin Project | Project Files</header>
-    1. Recipe Site ( <a href="./foundations/01-recipe-site/" target="_blank" rel="noopener noreferrer"></a> | <a href="./foundations/01-recipe-site/index.html" target="_blank">Live Demo</a> )
+    1. Recipe Site ( <a href="./foundations/01-recipe-site/" target="_blank" rel="noopener noreferrer">View Code</a> | <a href="./foundations/01-recipe-site/index.html" target="_blank">Live Demo</a> )
 </body>
 </html>
